homelab/terraform/modules/hosting/registry/values/virtual_service.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: ${ name }-vs
  namespace: ${ namespace }
  labels:
    app: ${ name }
    service: http
spec:
  gateways:
    - ${ namespace }-gw
  hosts:
    - ${ hostname }
  http:
    - route:
        - destination:
            host: ${ name }
            port:
              number: ${ port }
